--- a/app/globals.css
+++ b/app/globals.css
@@ -208,6 +208,8 @@ body {
   position: relative;
   font-weight: 900;
   letter-spacing: -0.01em;
+   -webkit-text-stroke: 0.3px white;
+  text-stroke: 0.3px white;
   background: linear-gradient(
     270deg,
     #0ea5e9,   /* sky blue */
